php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39017 foreach(($obj = new myClass) as $v); echo $obj; segfaults
Submitted: 2006-10-02 16:26 UTC Modified: 2006-10-03 09:12 UTC
From: colder@php.net Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.1.6 OS: Irrelevant
Private report: No CVE-ID: None
 [2006-10-02 16:26 UTC] colder@php.net
Description:
------------
The foreach construct destroys the object, leaving the variable in a strange state.

class A {} foreach(($a = new A) as $v);
var_dump($a); // UNKNOWN:0
echo $a; // segfaults

This was spotted by Zuu on ##php@freenode.



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-10-03 09:12 UTC] dmitry@php.net
Fixed in CVS HEAD and  PHP_5_2.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC