Fixed bug #39017 (foreach(($obj = new myClass) as $v); echo $obj; segfaults)